--- a/source/_posts/保守演化论.md
+++ b/source/_posts/保守演化论.md
@@ -5,6 +5,8 @@ categories: 知乎
 tags: 知乎
 ---
 
+## 保守演化论
+
 一项研究表明[[1]](https://rifters.com/real/articles/Science_Oxley_et_al_2008.pdf)，人对外部威胁的生理反应程度似乎可以表明他们在“如何保护现存社会结构免受内外威胁”方面的倾向。
 
 - 在46位具有强烈政治信念的成年参与者中，身体对突然出现的噪声和威胁性视觉图像的生理反应敏感度**明显较低**的人更有可能支持“援助他国、自由移民政策、和平主义、枪支管制”。
