--- a/source/_posts/去西部.md
+++ b/source/_posts/去西部.md
@@ -5,6 +5,8 @@ categories: 知乎
 tags: 知乎
 ---
 
+## 到属于青年的“西部”去
+
 2012年夏天，我刚刚考入清华大学土木工程系读书。开学伊始，辅导员教给我们的第一课，不是专业课程，也不是纪律守则，而是我们系的系歌。
 
 我一生都不会忘记这首歌。它的名字，叫做《祖国不会忘记》。
